# hdv

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs  option.rs
hdv/: Cargo.toml
hdv/src/: format.rs  serde.rs
hdv/src/io/: bin.rs  mod.rs  polars.rs  text.rs
ov/: Cargo.toml
ov/src/: format.rs  io.rs  lib.rs  serde.rs
ov/src/io/: bin.rs  mod.rs  polars.rs  text.rs
tests/: Cargo.toml
tests/src/: lib.rs
