[package]
name = "hdv_derive"
version = "0.3.0"
edition = "2021"
description = "`proc_macro_derive` for hdv"
license = "MIT"
repository = "https://github.com/Banyc/hdv.git"

[lib]
proc-macro = true

[dependencies]
hdv = { path = "../hdv", version = "0.3" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
