[package]
name = "hdv"
version = "0.4.0"
edition = "2021"
description = "Header-determined values"
license = "MIT"
repository = "https://github.com/Banyc/hdv.git"

[dependencies]
bincode = "1"
integer-encoding = "4"
polars = { version = "0.43", optional = true }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[features]
default = []
